--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <!-- <script src="./script.js"></script> -->
     <!--<script src="./script2.js"></script>--> 
-    <script src="./script3.js"></script>
+    <!-- <script src="./script3.js"></script> -->
+    <script src="./qollanma.js"></script>
 </body>
 </html>
