--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     <!-- <script src="./script.js"></script> -->
     <!--<script src="./script2.js"></script>--> 
     <!-- <script src="./script3.js"></script> -->
-    <script src="./qollanma.js"></script>
+    <!-- <script src="./qollanma.js"></script>-->
 </body>
 </html>
