--- a/index.html
+++ b/index.html
@@ -21,5 +21,9 @@
     <!--<script src="./script2.js"></script>--> 
     <!-- <script src="./script3.js"></script> -->
     <!-- <script src="./qollanma.js"></script>-->
+    <!--<script src="./mashq1.js"></script>--> 
+    <!--<script src="./mashq2.js"></script>-->
+    <script src="./mashq3.js"></script>
+
 </body>
 </html>
