HTML va Js orqali shakillarni boshqarish

--- a/index.html
+++ b/index.html
@@ -9,10 +9,34 @@
 </head>
 <body>
    <!-- <button onclick="alert('Siz menga bosdingiz')">Mishkani kistamga sossam oynab kityapti...</button>-->
-<button name="mainButton" onclick="onClickButton(this)">Bosing</button>
-<input oninput = "onInput(this)">
+    <!--<button name="mainButton" onclick="onClickButton(this)">Bosing</button>
+<input oninput = "onInput(this)">-->
 
-   
+<!--<p id="text">Text</p>--> 
+<!--  <p id="text" title="Oddiy tekst">Text</p>
+<span>Text 1</span>
+<span>Text 2</span>
+<span>Text 3</span> -->
+<!--  <span class="simple-text">Text 1</span>
+<span class="simple-text">Text 2</span>
+<span class="simple-text">Text 3</span>-->
+
+<!--  <form id="main-form" onsubmit="return checkForm(this)" method="post">
+    <label for="name">Ism</label>
+    <input type="text" name="name" placeholder="Ism" id="name"><br><br>
+    <label for="password">Maxfiyson:</label>
+    <input type="password" name="pass" placeholder="Maxfiyson" id="pass"><br><br>
+    <label for="repass">Tekshirish Maxfiysonni</label>
+    <input type="password" name="repass" placeholder="Tekshirish Maxfiysonni" id="repass"><br><br>
+    <span>Jinsi:</span>
+    <input type="radio" name="state" id="male" value="erkak">
+    <label for="male">erkak</label>
+    <input type="radio" name="state" id="female" value="ayol">
+    <label for="female">ayol</label><br><br>
+    <div id="error" style="color: red"></div>
+    <input type="submit" name="submit" value="Tayyor">
+</form>
+   -->
     
 
     <!-- <script src="./script.js"></script> -->
@@ -22,7 +46,8 @@
     <!--<script src="./mashq1.js"></script>--> 
     <!--<script src="./mashq2.js"></script>-->
     <!--<script src="./mashq3.js"></script>-->
-    <script src="./mashq4.js"></script>
+    <!--<script src="./mashq4.js"></script>-->
+    <script src="./mashq5.js"></script>
 
 </body>
 </html>
