interval va taymerlar

--- a/index.html
+++ b/index.html
@@ -37,8 +37,20 @@
     <input type="submit" name="submit" value="Tayyor">
 </form>
    -->
-    
+    <!--6-->
 
+
+
+
+
+
+
+
+
+
+
+
+    
     <!-- <script src="./script.js"></script> -->
     <!--<script src="./script2.js"></script>--> 
     <!-- <script src="./script3.js"></script> -->
@@ -47,7 +59,8 @@
     <!--<script src="./mashq2.js"></script>-->
     <!--<script src="./mashq3.js"></script>-->
     <!--<script src="./mashq4.js"></script>-->
-    <script src="./mashq5.js"></script>
+    <!--<script src="./mashq5.js"></script>-->
+    <script src="./mashq6.js"></script>
 
 </body>
 </html>
