--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 
 
-    
+
     <!-- <script src="./script.js"></script> -->
     <!--<script src="./script2.js"></script>--> 
     <!-- <script src="./script3.js"></script> -->
@@ -60,7 +60,8 @@
     <!--<script src="./mashq3.js"></script>-->
     <!--<script src="./mashq4.js"></script>-->
     <!--<script src="./mashq5.js"></script>-->
-    <script src="./mashq6.js"></script>
+    <!--<script src="./mashq6.js"></script>-->
+    <script src="./mashq7.js"></script>
 
 </body>
 </html>
